refactor CreateDocumentService.java
Arrays.asList -> List.of 사용